Projeto CRUD funcionários

--- a/app/src/main/res/layout/activity_lista_funcionarios.xml
+++ b/app/src/main/res/layout/activity_lista_funcionarios.xml
@@ -18,15 +18,15 @@
 <!--        android:layout_alignParentRight="true"-->
 <!--        tools:ignore="MissingConstraints" />-->
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/lista_funcionarios_cadastra_funcionario"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:src="@android:drawable/ic_input_add"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="320dp"
-        tools:layout_editor_absoluteY="642dp" />
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--        android:id="@+id/lista_funcionarios_cadastra_funcionario"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:clickable="true"-->
+<!--        android:src="@android:drawable/ic_input_add"-->
+<!--        tools:ignore="MissingConstraints"-->
+<!--        tools:layout_editor_absoluteX="320dp"-->
+<!--        tools:layout_editor_absoluteY="642dp" />-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lista_funcionarios_recyclerview"
@@ -48,17 +48,17 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 
-<!--    <TextView-->
-<!--        android:id="@+id/lista_funcionarios_cadastra_funcionario"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:padding="10dp"-->
-<!--        android:text="Cadastrar funcionário"-->
-<!--        android:textColor="@android:color/darker_gray"-->
-<!--        android:textSize="20sp"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent" />-->
+    <TextView
+        android:id="@+id/lista_funcionarios_cadastra_funcionario"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="Cadastrar funcionário"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
