--- a/app/src/main/res/layout/activity_lista_funcionarios.xml
+++ b/app/src/main/res/layout/activity_lista_funcionarios.xml
@@ -6,59 +6,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/lista_funcionarios_cadastra_funcionario"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_alignParentEnd="true"-->
-<!--        android:layout_alignParentBottom="true"-->
-<!--        android:layout_margin="16dp"-->
-<!--        android:clickable="true"-->
-<!--        android:focusable="true"-->
-<!--        android:layout_alignParentRight="true"-->
-<!--        tools:ignore="MissingConstraints" />-->
-
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/lista_funcionarios_cadastra_funcionario"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:clickable="true"-->
-<!--        android:src="@android:drawable/ic_input_add"-->
-<!--        tools:ignore="MissingConstraints"-->
-<!--        tools:layout_editor_absoluteX="320dp"-->
-<!--        tools:layout_editor_absoluteY="642dp" />-->
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/lista_funcionarios_recyclerview"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layoutManager="LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@id/lista_funcionarios_cadastra_funcionario"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/lista_funcionarios_fab_cadastra_funcionario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="331dp"
+        android:layout_marginLeft="331dp"
+        android:layout_marginTop="654dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="21dp"
+        android:clickable="true"
+        android:contentDescription="@string/todo"
+        android:focusable="true"
+        app:backgroundTint="#FF9800"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_funcionario" />
+        app:srcCompat="@drawable/ic_cadastra_funcionario_foreground"
+        tools:ignore="SpeakableTextPresentCheck" />
 
-    <View android:id="@+id/lista_funcionarios_fundo_gradiente_inferior"
-        android:layout_width="0dp"
-        android:layout_height="5dp"
-        android:background="@drawable/fundo_gradiente_cadastra_funcionario"
-        app:layout_constraintBottom_toTopOf="@id/lista_funcionarios_cadastra_funcionario"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-
-    <TextView
-        android:id="@+id/lista_funcionarios_cadastra_funcionario"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="Cadastrar funcionário"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="20sp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/lista_funcionarios_recyclerview"
+        android:layout_width="412dp"
+        android:layout_height="635dp"
+        android:layout_marginBottom="654dp"
+        app:layoutManager="LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/item_funcionario" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
